Bug 126025 - Extrusion on/off is faulty in saving for Fontwork favorite 40
Summary: Extrusion on/off is faulty in saving for Fontwork favorite 40
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:7.1.0 target:6.4.5 target:7.0.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: FontWork-WordArt
  Show dependency treegraph
 
Reported: 2019-06-20 16:30 UTC by Regina Henschel
Modified: 2020-06-09 13:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Test file with fontwork shape "Favorite 40" (16.38 KB, application/vnd.oasis.opendocument.presentation)
2019-06-20 16:30 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2019-06-20 16:30:18 UTC
Created attachment 152315 [details]
Test file with fontwork shape "Favorite 40"

Open attached document. Turn extrusion off for shape on second and for shape on third slide. Save document and reopen it. The reopened document does not have the same extrusion settings as before.

It is OK in Version: 4.5.0.0.alpha0+
Build ID: 40b1e8266e47792d354cd457c652bfb0f0a21e69
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-02-11_00:13:43
Locale: en_US

It is broken in Version: 5.1.6.1
Build ID: f3e25ec0581f5012f54d8810dcddd5824f4ee374
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
Locale: de-DE (en_US); Calc: group

and still broken in Version: 6.4.0.0.alpha0+ (x64)
Build ID: 7aaa7212f2f37606b34d44a039398f05c02d5660
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-11_23:48:14
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded
Comment 1 raal 2019-08-28 21:02:13 UTC
I can confirm with Version: 6.4.0.0.alpha0+
Build ID: 2bed8af91fc2654b9ed2432f969d32d5741a529b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
but not in Version: 4.5.0.0.alpha0+
Build ID: 587315ebd5e4417e85eb3ffafd978fcddb09b19f
Comment 2 Buovjaga 2020-06-06 17:28:25 UTC
Bibisected with Linux 50max to https://git.libreoffice.org/core/+/85f28ec44a2c169c91dac9346e9c71feda6a6cab%5E!/
Clean up C-style casts from pointers to void

Double-checked by flipping between the bad & good commits.

It certainly touches seemingly relevant files like customshapeitem.cxx, unoshap2.cxx

Simplified steps:

1. Open attachment 152315 [details]
2. Select the fontwork shape in slide 3. The Fontwork floating toolbar pops up.
3. Click the Extrusion on/off button in the Fontwork toolbar (the last button) so the extrusion goes away
4. Save and reload

Observe that all the shapes in the slides lost their extrusion.

Adding Cc: to Stephan Bergmann
Comment 3 Commit Notification 2020-06-09 07:17:02 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b505cd8635171e39d055b9a800f672a6313d8cea

tdf#126025: Non-const GetPropertyValueByName must use non-const Sequence []

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2020-06-09 08:21:26 UTC
Thanks, seems to be working now!

Arch Linux 64-bit
Version: 7.1.0.0.alpha0+
Build ID: 49df367a5da14b31729e2f4f5dd6bf4e249df8d3
CPU threads: 8; OS: Linux 5.6; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 9 June 2020
Comment 5 Commit Notification 2020-06-09 11:22:56 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/6a195fb60c091e4e42111fb8c23324badacb35b7

tdf#126025: Non-const GetPropertyValueByName must use non-const Sequence []

It will be available in 6.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-06-09 13:25:14 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/55cd7bde81910f85fffb778f3c0a6ad143dff392

tdf#126025: Non-const GetPropertyValueByName must use non-const Sequence []

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.