tdf#126025: Non-const GetPropertyValueByName must use non-const Sequence []

...which internally calls getArray to make sure it references a unique sequence.
Regression introduced with 85f28ec44a2c169c91dac9346e9c71feda6a6cab "Clean up C-
style casts from pointers to void".

Change-Id: Id80b75f06322c65fc31040cc0b1892fe3a0aeaab
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95862
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>